password check, login&logout, intent

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
             </intent-filter>
         </activity>
 <!--        <activity android:name=".SignUpActivity"/>-->
+        <activity android:name=".LoginActivity">
+        </activity>
+        <activity android:name=".MainActivity"/>
     </application>
 
 </manifest>
