--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
         <activity android:name=".LoginActivity">
         </activity>
         <activity android:name=".MainActivity"/>
+        <activity android:name=".PasswordResetActivity"/>
+        <activity android:name=".MemberActivity"/>
     </application>
 
 </manifest>
