--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,11 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -25,6 +30,7 @@
         <activity android:name=".MainActivity"/>
         <activity android:name=".PasswordResetActivity"/>
         <activity android:name=".MemberinitActivity"/>
+        <activity android:name=".CameraActivity"/>
     </application>
 
 </manifest>
