--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="dduwcom.mobile.simple_sns">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
 
     <uses-feature android:name="android.hardware.camera" />
@@ -16,7 +16,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Simple_SNS">
-        <activity android:name=".SignUpActivity">
+        <activity android:name=".activity.SignUpActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,12 +25,13 @@
             </intent-filter>
         </activity>
 <!--        <activity android:name=".SignUpActivity"/>-->
-        <activity android:name=".LoginActivity">
+        <activity android:name=".activity.LoginActivity">
         </activity>
-        <activity android:name=".MainActivity"/>
-        <activity android:name=".PasswordResetActivity"/>
-        <activity android:name=".MemberinitActivity"/>
-        <activity android:name=".CameraActivity"/>
+        <activity android:name=".activity.MainActivity"/>
+        <activity android:name=".activity.PasswordResetActivity"/>
+        <activity android:name=".activity.MemberinitActivity"/>
+        <activity android:name=".activity.CameraActivity"/>
+        <activity android:name=".activity.GalleryActivity"/>
     </application>
 
 </manifest>
