--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,8 @@
         <activity android:name=".activity.MemberinitActivity"/>
         <activity android:name=".activity.CameraActivity"/>
         <activity android:name=".activity.GalleryActivity"/>
+        <activity android:name=".activity.BasicActivity"/>
+        <activity android:name=".activity.WritePostActivity"/>
     </application>
 
 </manifest>
