--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Simple_SNS">
-        <activity android:name=".activity.SignUpActivity">
+        <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,7 +27,7 @@
 <!--        <activity android:name=".SignUpActivity"/>-->
         <activity android:name=".activity.LoginActivity">
         </activity>
-        <activity android:name=".activity.MainActivity"/>
+        <activity android:name=".activity.SignUpActivity"/>
         <activity android:name=".activity.PasswordResetActivity"/>
         <activity android:name=".activity.MemberinitActivity"/>
         <activity android:name=".activity.CameraActivity"/>
