custom View + 게시글ㄹ 화면 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
         <activity android:name=".activity.GalleryActivity"/>
         <activity android:name=".activity.BasicActivity"/>
         <activity android:name=".activity.WritePostActivity"/>
+        <activity android:name=".activity.PostActivity"/>
     </application>
 
 </manifest>
